--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ background-color: orange;
 }
 
 .cmxform {
-  height: 800px;
+  height: 540px;
 
 
 }
@@ -63,7 +63,7 @@ border:2px solid blue;
 
 #username {
   width: 250px;
-  height: 30px;
+  height: 40px;
   margin-top: 5px;
   border-radius: 5px;
  border:none;
@@ -72,7 +72,7 @@ border:2px solid blue;
 
 #password {
   width: 250px;
-  height: 30px;
+  height: 40px;
 margin-top:5px;
 border-radius: 5px;
 border: none;
@@ -88,7 +88,7 @@ border:none;
 
 #email {
   width: 250px;
-  height: 30px;
+  height: 40px;
 margin-top: 5px;border-radius: 5px;
 border:none;
 margin-left: 10px;
@@ -336,7 +336,7 @@ margin-left: 10px;
 
 #confirm_password {
   width: 253px;
-  height: 30px;
+  height: 40px;
   margin-top: 5px;
   border-radius: 5px;
   border:none;
@@ -367,7 +367,7 @@ border-radius: 5px;
   background-color: green;
   margin-left: 35px;
   border-radius: 5px;
-  border:2px solid blue;
+  border:none;
 }
 
 .submit:hover {
@@ -439,12 +439,12 @@ label.error{
   margin-left: 600px;
 }
 #tr{
-  margin-top: 20px;
+  
   padding-right: 25%;
 } 
 #password1{
   width: 251px;
-  height: 30px;
+  height: 40px;
 
 border-radius: 5px;
 border:none;
@@ -477,6 +477,17 @@ margin-left:10px;
  
 
 }
+a {
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: underline;
+}
+
+
+
+
+
 #user1{
   width: 253px;
   height: 30px;
@@ -640,4 +651,8 @@ mark{
 }
 .cmxform3{
   margin-top: 50px;
+}
+.active, .btn:hover {
+  background-color: #666;
+  color: white;
 }
